@@ -19,5 +19,13 @@ database_files    = $(database_in_files:.xml.in=.xml)
 
 all-local: $(database_files)
 
+check-local:
+	$(info "Correct any errors before making a distribution.")
+if HAVE_XMLLINT
+	$(XMLLINT) --noout --valid $(database_files)
+else
+	$(warning "Cannot check the XML sources because 'xmllint' is missing.")
+endif
+
 @INTLTOOL_XML_RULE@
 
